--- a/example/index.html
+++ b/example/index.html
@@ -1,19 +1,19 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
-      :root {
-        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      }
-    </style>
-  </head>
+	<head>
+		<meta charset="UTF-8" />
+		<link href="/vite.svg" rel="icon" type="image/svg+xml" />
+		<meta content="width=device-width, initial-scale=1.0" name="viewport" />
+		<style>
+			:root {
+				font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+			}
+		</style>
+	</head>
 
-  <body>
-    <div id="docsearch"></div>
-    <p>Select me then press the search hotkey</p>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+	<body>
+		<div id="docsearch"></div>
+		<p>Select me then press the search hotkey</p>
+		<script src="/src/main.ts" type="module"></script>
+	</body>
 </html>
